# Open_Duck_Mini_Runtime

./: .gitignore  README.md  setup.cfg
mini_bdx_runtime/mini_bdx_runtime/: __init__.py  hwi.py  io_330.py  onnx_infer.py  rl_utils.py
scripts/: GUSGUS.py  bench.py  client_test.py  commands_client.py  control_server.py  imu_test.py  plot_squat.py  record_imu.py  rl_walk.py  rl_walk2.py  rl_walk3.py  saved_obs.pkl  squat.py  test.py  test2.py
