[metadata]
name = mini-bdx-runtime
version = 0.0.1
author = Antoine Pirrone
author_email = antoine.pirrone@gmail.com
url = https://github.com/apirrone/mini_BDX_runtime
description = Runtime code for mini BDX
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =mini_bdx_runtime
install_requires =
    pypot @ git+https://github.com/apirrone/pypot@support_4B_registers
    onnxruntime==1.18.1
    numpy==1.26.4
    adafruit-circuitpython-bno055==5.4.13
    FramesViewer
    scipy==1.13.1
[options.packages.find]
where=mini_bdx_runtime

[options.package_data]

[options.extras_require]

[options.entry_points]
console_scripts =
